test_suite/tests/ui/float/visibility/private_error.stderr
error[E0603]: enum import `PercentageError` is private
 --> tests/ui/float/visibility/private_error.rs:8:31
  |
8 | type TheError = encapsulated::PercentageError;
  |                               ^^^^^^^^^^^^^^^ private enum import
  |
note: the enum import `PercentageError` is defined here...
 --> tests/ui/float/visibility/private_error.rs:4:5
  |
4 |     #[nutype(validate(greater_or_equal = 0.0, less_or_equal = 100.0))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the enum `PercentageError` which is defined here
 --> tests/ui/float/visibility/private_error.rs:4:5
  |
4 |     #[nutype(validate(greater_or_equal = 0.0, less_or_equal = 100.0))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
  = note: this error originates in the attribute macro `nutype` (in Nightly builds, run with -Z macro-backtrace for more info)
